Preparing release 2.2.0.